--- a/aspnet-core/src/ThinkSites.Web.Host/appsettings.json
+++ b/aspnet-core/src/ThinkSites.Web.Host/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=ThinkSitesDb; Trusted_Connection=True;"
+    "Default": "Server=localhost; Database=ThinkSitesDb; Trusted_Connection=False; User Id=sa; Password=P@55w0rd"
   },
   "App": {
     "ServerRootAddress": "https://localhost:44311/",
