--- a/aspnet-core/src/ThinkSites.Migrator/appsettings.json
+++ b/aspnet-core/src/ThinkSites.Migrator/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=ThinkSitesDb; Trusted_Connection=True;"
+    "Default": "Server=(localdb)\\MSSQLLocalDB; Database=ThinkSitesDb; Trusted_Connection=True;"
   }
 }
