--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -7,7 +7,7 @@
     "@aspnet/signalr": "^1.1.4",
     "@craco/craco": "^5.6.2",
     "abp-web-resources": "^5.1.1",
-    "antd": "^4.6.4",
+    "antd": "4.6.4",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "craco-antd": "^1.14.1",
@@ -15,8 +15,7 @@
     "lodash": "^4.17.15",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.27",
+    "moment": "2.24.0",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-document-title": "^2.0.3",
@@ -40,7 +39,7 @@
     "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.23",
     "@types/moment": "^2.13.0",
-    "@types/moment-timezone": "^0.5.12",
+    "@types/moment-timezone": "^0.5.30",
     "@types/node": "^12.12.14",
     "@types/react": "^16.9.13",
     "@types/react-document-title": "^2.0.3",
@@ -48,8 +47,8 @@
     "@types/react-loadable": "^5.5.2",
     "@types/react-router-dom": "^5.1.3",
     "@types/recharts": "^1.8.3",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "4.0.1",
+    "@typescript-eslint/parser": "4.0.1",
     "copy-webpack-plugin": "^5.0.5",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^9.0.0",
